; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ow.c_ow_write_bytes.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ow.c_ow_write_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ow = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ow_write_bytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ow_write_bytes(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @luaL_checkinteger(i32* %7, i32 1)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @ow, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @MOD_CHECK_ID(i32 %9, i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32* @luaL_checklstring(i32* %12, i32 2, i64* %4)
  store i32* %13, i32** %6, align 8
  %14 = load i32*, i32** %2, align 8
  %15 = call i64 @lua_isnumber(i32* %14, i32 3)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %1
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @lua_tointeger(i32* %18, i32 3)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %17, %1
  %21 = load i32, i32* %3, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 1, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %20
  %25 = load i32, i32* %5, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = load i64, i64* %4, align 8
  %28 = trunc i64 %27 to i32
  %29 = load i32, i32* %3, align 4
  %30 = call i32 @onewire_write_bytes(i32 %25, i32* %26, i32 %28, i32 %29)
  ret i32 0
}

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32 @MOD_CHECK_ID(i32, i32) #1

declare dso_local i32* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i64 @lua_isnumber(i32*, i32) #1

declare dso_local i32 @lua_tointeger(i32*, i32) #1

declare dso_local i32 @onewire_write_bytes(i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
